--- a/public/css/select2.css
+++ b/public/css/select2.css
@@ -4,6 +4,7 @@
     height: 40px;
     margin-bottom: 10px;
     outline: none !important;
+    border-radius: 10px;
     transition: all 0.15s ease-in-out;
 }
 
